--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,21 @@
-claude-code-sdk-python/
-.idea/
-scout_chats.db
 __pycache__/
-*.py[cod]
-*$py.class
-.idea/
-
-# CSV data files
-*.csv
-exp/arxiv_exp/,
+*.pyc
+*.pyo
+*.pyd
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
